Football League Schedule

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,10 +20,10 @@
         <item>German Bundesliga</item>
         <item>Italian Serie A</item>
         <item>Spanish La Liga</item>
-        <item>American Mayor League</item>
+        <item>American Major League Soccer</item>
         <item>Portuguese Primeira Liga</item>
-        <item>Australian A League</item>
-        <item>Scotish Premier League</item>
+        <item>Australian A-League</item>
+        <item>Scottish Premier League</item>
         <item>English League 1</item>
     </string-array>
 
